--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -22,6 +22,7 @@
   <div class="row p-1">
     <div class="col" >
         <app-video></app-video>
+      <app-gamepad></app-gamepad>
     </div>
     <div class="col-sm-2">
       <div class="col">
